[package]
name = "scheduler-wasm"
version = "0.7.1"
authors = ["Alan Sartorio <alan42ga@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
scheduler = { git = "https://github.com/alansartorio/scheduler", default-features = false, features = ["json"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
serde = "1.0.147"
serde_json = "1.0.87"
enum-map = { version = "2.4.1", features = ["serde"] }
anyhow = "1.0.66"
serde-wasm-bindgen = "0.5.0"
itertools = "0.11.0"

[dependencies.web-sys]
version = "0.3.60"
features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "Document", "Location", "ReadableStream"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
